<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context="MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_horizontal"
            android:text="@string/questionintro"
            android:textColor="#616161"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/question1"
            android:textColor="#616161"
            android:textSize="18sp"
            android:textStyle="bold" />


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question1_choice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/question1choice1" />

            <RadioButton
                android:id="@+id/question1_choice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/question1choice2" />

            <RadioButton
                android:id="@+id/question1_choice3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/question1choice3" />

            <RadioButton
                android:id="@+id/question1_choice4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/question1choice4" />

        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/question2"
            android:textColor="#616161"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/question2_choice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/question2choice"
            android:inputType="textCapWords" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/question3"
            android:textColor="#616161"
            android:textSize="18sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/question3_choice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/question3choice1" />

        <CheckBox
            android:id="@+id/question3_choice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/question3choice2" />


        <CheckBox
            android:id="@+id/question3_choice3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/question3choice3" />

        <CheckBox
            android:id="@+id/question3_choice4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/question3choice4" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/question4"
            android:textColor="#616161"
            android:textSize="18sp"
            android:textStyle="bold" />


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/question4_choice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/question4choice1" />

            <RadioButton
                android:id="@+id/question4_choice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/question4choice2" />

            <RadioButton
                android:id="@+id/question4_choice3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/question4choice3" />
        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/question5"
            android:textColor="#616161"
            android:textSize="18sp"
            android:textStyle="bold" />


        <CheckBox
            android:id="@+id/question5_choice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/question5choice1" />

        <CheckBox
            android:id="@+id/question5_choice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/question5choice2" />

        <CheckBox
            android:id="@+id/question5_choice3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/question5choice3" />

        <CheckBox
            android:id="@+id/question5_choice4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/question5choice4" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/question6"
            android:textColor="#616161"
            android:textSize="18sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/question6_choice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/question6choice1" />

        <CheckBox
            android:id="@+id/question6_choice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/question6choice2" />


        <CheckBox
            android:id="@+id/question6_choice3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/question6choice3" />

        <CheckBox
            android:id="@+id/question6_choice4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/question6choice4" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/question7"
            android:textColor="#616161"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question7_choice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/question7choice1" />

            <RadioButton
                android:id="@+id/question7_choice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/question7choice2" />

            <RadioButton
                android:id="@+id/question7_choice3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/question7choice3" />

            <RadioButton
                android:id="@+id/question7_choice4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/question7choice4" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/question8"
            android:textColor="#616161"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/question8_choice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/question8choice"
            android:inputType="textCapWords" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/question9"
            android:textColor="#616161"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question9_choice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/question9choice1" />

            <RadioButton
                android:id="@+id/question9_choice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/question9choice2" />

        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/question10"
            android:textColor="#616161"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question10_choice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/question10choice1" />

            <RadioButton
                android:id="@+id/question10_choice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/question10choice2" />

            <RadioButton
                android:id="@+id/question10_choice3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/question10choice3" />

            <RadioButton
                android:id="@+id/question10_choice4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/question10choice4" />

        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-condensed"
            android:onClick="submitQuiz"
            android:text="SUBMIT"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>
</ScrollView>

